--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -76,38 +76,34 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-    }
-
+}  
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
     display: block;
+    text-align: center;
    
 }
 
 .benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
+    display: block;
+    text-align: center;
 }
 
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
-}
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
+    display: block;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
 
-.benefit-cost h3 {
-    margin-bottom: 10px;
+.benefits-content{
+    margin-bottom: 40px;
     text-align: center;
+    
 }
 
 .benefit-lead img {
@@ -183,9 +179,9 @@ p {
 }
 
 .social-media-marketing img {
-    max-height: 200px;
-}
+    max-height: 200px; 
 
+}
 .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
