--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -99,30 +99,21 @@ p {
     text-align: center;
 }
 
-
 .benefits-content{
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     text-align: center;
+    font-size: 50px;
+
     
 }
 
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
+.benefits img {
+    display: inline block;
+    margin: 20px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px; 
-}
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
 /* End benefits Banner*/
 
 /* content */
@@ -140,12 +131,13 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+    
 }
 
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 35px;
-    height: 280px;
+    height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
@@ -155,7 +147,7 @@ p {
 .online-reputation-management {
     margin-bottom: 20px;
     padding: 35px;
-    height: 280px;
+    height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
@@ -164,37 +156,22 @@ p {
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 35px;
-    height: 280px;
+    height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff; 
 }
 
-.search-engine-optimization img {
+.content img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px; 
-
-}
-.search-engine-optimization h2 {
+.content h2 {
     margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
+    font-size: 40px;
+    display: table;
+    margin-right: 50px;
+    
 }
 
 /* End Content*/
