--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -77,26 +77,12 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }  
-.benefit-lead {
+.benefit-lead,.benefit-brand,.benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
     display: block;
     text-align: center;
    
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-    display: block;
-    text-align: center;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-    display: block;
-    text-align: center;
 }
 
 .benefits-content{
@@ -134,7 +120,8 @@ p {
     
 }
 
-.search-engine-optimization {
+.social-media-marketing,.search-engine-optimization,.online-reputation-management
+ {
     margin-bottom: 20px;
     padding: 35px;
     height: 300px;
@@ -143,34 +130,16 @@ p {
     color: #ffffff;
     
 }
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 35px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 35px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff; 
-}
-
-.content img {
+ 
+.social-media-marketing img,.search-engine-optimization img,.online-reputation-management img 
+{
     max-height: 200px;
 }
 
-.content h2 {
+.social-media-marketing h2,.online-reputation-management h2,.search-engine-optimization h2
+ {
     margin-bottom: 20px;
-    font-size: 40px;
-    display: table;
-    margin-right: 50px;
+    font-size: 36px;
     
 }
 
