--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 /* Navigation bar */
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -17,17 +17,17 @@ body {
 
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
     
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+header div {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -35,13 +35,10 @@ body {
     font-size: 20px;   
 }
 
-.header div ul {
-    list-style-type: none;
-}
-
-.header div ul li {
+header div ul li {
     display: inline-block;
     margin-left: 25px;
+    list-style-type: none;
 }
 a {
     color:  #ffffff;
@@ -89,8 +86,7 @@ p {
     margin-bottom: 20px;
     text-align: center;
     font-size: 50px;
-
-    
+ 
 }
 
 .benefits img {
